--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@vue/eslint-config-typescript": "^5.0.2",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0-0",
+    "sass": "^1.32.4",
+    "sass-loader": "^10.1.1",
     "typescript": "~3.9.3"
   }
 }
